<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_bg_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

            <TextView
                android:id="@+id/city"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/info"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/weather"
                android:layout_margin="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Click on the button and Say....."
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/w_yangon"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/w_mandalay"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/w_naypyitaw"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>

    <com.bit.asrsdk.AsrButton
        android:id="@+id/asrbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/active_mic"
        tools:ignore="VectorDrawableCompat"
        android:layout_gravity="bottom|end"
        android:clickable="false" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>